# rdatacompy

./: .gitignore  CHANGELOG.md  Cargo.toml  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  RESTRUCTURING_SUMMARY.md  TODO.md  architecture.md  build.sh  pyproject.toml
.github/: build-wheel.yml
.github/workflows/: main.yml  release.yml
examples/: basic_usage.py  benchmark.py  benchmark_large.py  create_large_scenario.py  create_realistic_scenario.py  example_paths.py  prepare_datasets.py  spark_35_compatibility.py  test_date_timestamp.py  test_decimal_types.py  test_multi_dataframe_types.py  test_print_improvements.py  test_realistic.py  test_spark_dataframes.py
python/rdatacompy/: __init__.py
src/: column_compare.rs  compare.rs  date_utils.rs  error.rs  lib.rs  report.rs  row_matcher.rs  tolerance.rs  types.rs
