[package]
name = "rdatacompy"
version = "0.1.8"
edition = "2021"

[lib]
name = "rdatacompy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
arrow = { version = "53.0", features = ["pyarrow"] }
ahash = "0.8"
indexmap = "2.0"
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
